--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -19,40 +19,51 @@
 
 
         <ImageView
-            android:layout_marginBottom="30dp"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_marginBottom="30dp"
             android:src="@drawable/logo" />
 
 
         <EditText
-            android:padding="10dp"
-            android:background="@drawable/borda"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/borda"
+            android:drawableRight="@drawable/ic_email"
             android:hint="Email:"
             android:inputType="textEmailAddress"
-            android:drawableRight="@drawable/ic_email"
-            android:maxLength="30" />
+            android:maxLength="30"
+            android:padding="10dp" />
 
 
         <EditText
-            android:padding="10dp"
-            android:background="@drawable/borda"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/borda"
+            android:drawableRight="@drawable/ic_lock"
             android:hint="Senha:"
             android:inputType="textPassword"
+            android:maxLength="30"
+            android:padding="10dp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/borda"
             android:drawableRight="@drawable/ic_lock"
-            android:maxLength="30" />
+            android:hint="Confirmar Senha:"
+            android:inputType="textPassword"
+            android:maxLength="30"
+            android:padding="10dp" />
 
         <LinearLayout
-            android:layout_marginTop="50dp"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="horizontal">
 
 
             <Button
